# cs261-proto

./: .gitignore  README.md  implementation-plan.md  overview.md  project-specification.md  requirement-and-design-report-spec.md
backend/: pyproject.toml
backend/airport_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py  models.py
backend/app/api/: routes.py
backend/app/simulation/: engine.py  stats.py
backend/tests/: test_api.py  test_engine.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfigPanel.tsx  ResultsDashboard.tsx  RunwayEditor.tsx  ScenarioCompare.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/types/: index.ts
