[project]
name = "airport-sim"
version = "0.1.0"
description = "Airport simulation engine"
requires-python = ">=3.11"
dependencies = [
    "simpy>=4.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
